--- a/src/index.css
+++ b/src/index.css
@@ -384,7 +384,39 @@ button {
   display: flex;
   gap: 64px;
   width: 100%;
+  height: 100%;
   z-index: 1;
+}
+
+.slide-content.flex-col {
+  flex-direction: column;
+}
+
+.slide-content.flex-row {
+  flex-direction: row;
+}
+
+.slide-content.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+
+.slide-content.justify-center {
+  justify-content: center;
+}
+
+.slide-content.items-center {
+  align-items: center;
+}
+
+.slide-content.items-start {
+  align-items: flex-start;
+}
+
+.slide-text-area.items-center {
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .slide-image-area {
